--- a/weather-app-gi/weatherapp/web-server/templates/partials/header.hbs
+++ b/weather-app-gi/weatherapp/web-server/templates/partials/header.hbs
@@ -1,7 +1,19 @@
 <header>
     <h1>{{title}}</h1>
-
+{{!-- 
     <a href="/">Weather</a>
     <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <a href="/help">Help</a> --}}
+
+    <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/">Weather</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/about">about</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/help">Help</a>
+  </li>
+</ul>
 </header>
